# archives

./: .appveyor.yml  .codeclimate.yml  .cquery  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .reseapath  .travis.dockerfile  .travis.sh  .travis.yml  2fa  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  Guardfile  LICENSE  LICENSE.md  Makefile  README.md  TODO.md  VERSION  app.json  arm-elf-eabi-binutils.rb  arm-elf-eabi-gcc.rb  busybook  common.mk  ena.mk  esptool.js  genconfig  index.html  index.js  mbr.S  package.json  releases.json  serial.js  setup-osx-dev-env.sh  (+4 more)
cui-editor/: .gitignore  .travis.yml  Cargo.toml
cui-editor/src/: buffer.rs  color.rs  editor.rs  logger.rs  main.rs  terminal.rs  window.rs
cui-editor/src/plugins/: finder.rs  lsp.rs  mod.rs  prelude.rs
ftl1/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  package.json  rust-toolchain.toml  tsconfig.json
ftl1/.github/workflows/: ci.yml  docs.yml
ftl1/apps/apiserver/: Cargo.toml
ftl1/apps/apiserver/shell/: index.html  main.css  main.js
ftl1/apps/apiserver/src/: lib.rs
ftl1/apps/apiserver/src/endpoints/: echo.rs  mod.rs  uptime.rs
ftl1/apps/apiserver/src/http/: headers.rs  method.rs  mod.rs  parser.rs  request.rs  response.rs  status.rs
ftl1/apps/echo/: Cargo.toml
ftl1/apps/echo/src/: lib.rs
ftl1/apps/echo_client/: Cargo.toml
ftl1/apps/echo_client/src/: lib.rs
ftl1/apps/hello/: Cargo.toml
ftl1/apps/hello/src/: lib.rs
ftl1/apps/tcpip/: Cargo.toml
ftl1/apps/tcpip/src/: device.rs  lib.rs  tcpip.rs  time.rs  uri.rs
ftl1/apps/virtio_blk/: Cargo.toml
ftl1/apps/virtio_blk/src/: lib.rs  virtio_blk.rs
ftl1/apps/virtio_net/: Cargo.toml
ftl1/apps/virtio_net/src/: lib.rs  virtio_net.rs
ftl1/deploy/: boot.sh  ftl.service  setup.sh
ftl1/docs/: index.md  package.json
ftl1/docs/.vitepress/: config.mts
ftl1/docs/advanced/: kernel-development.md
ftl1/docs/changes/: upcoming-features.md
ftl1/docs/getting-started/: architecture.md  comparisons.md  quick-start.md  why-rust.md
ftl1/docs/guides/: debugging.md  deploying.md  testing.md  writing-applications.md  writing-device-drivers.md
ftl1/docs/learn/: channel.md  environ.md  isolation.md  linux-compatibility.md
ftl1/kernel/: Cargo.toml
ftl1/kernel/src/: address.rs  boot.rs  channel.rs  cpuvar.rs  device_tree.rs  global_allocator.rs  handle.rs  interrupt.rs  main.rs  memory.rs  panic.rs  poll.rs  print.rs  process.rs  scheduler.rs  shared_ref.rs  spinlock.rs  startup.rs  syscall.rs  thread.rs  timer.rs  vmarea.rs  vmspace.rs
ftl1/kernel/src/arch/arm64/: boot.rs  cpuvar.rs  exception.rs  gic.rs  idle.rs  kernel.json  kernel.ld  mod.rs  serial.rs  syscall.rs  thread.rs  timer.rs  vmspace.rs
ftl1/kernel/src/arch/host/: mod.rs
ftl1/kernel/src/arch/riscv64/: boot.rs  cpuvar.rs  idle.rs  kernel.json  kernel.ld  mod.rs  plic.rs  sbi.rs  serial.rs  syscall.rs  thread.rs  timer.rs  trap.rs  vmspace.rs
ftl1/kernel/src/isolation/: inkernel.rs  mod.rs
ftl1/libs/rust/dtb_parser/: Cargo.toml
ftl1/libs/rust/dtb_parser/src/: dtb.rs  lib.rs  name.rs  node.rs  prop.rs  spec.rs
ftl1/libs/rust/ftl/: Cargo.toml
ftl1/libs/rust/ftl/src/: channel.rs  collections.rs  error.rs  eventloop.rs  handle.rs  interrupt.rs  lib.rs  log.rs  poll.rs  prelude.rs  process.rs  spec.rs  start.rs  syscall.rs  thread.rs  timer.rs  vmarea.rs  vmspace.rs
ftl1/libs/rust/ftl_driver/: Cargo.toml
ftl1/libs/rust/ftl_driver/src/: barrier.rs  device.rs  iospace.rs  lib.rs  oneshot_dma.rs  persistent_dma.rs
ftl1/libs/rust/ftl_macros/: Cargo.toml
ftl1/libs/rust/ftl_macros/src/: error.rs  lib.rs
ftl1/libs/rust/ftl_types/: Cargo.toml
ftl1/libs/rust/ftl_types/src/: device.rs  environ.rs  error.rs  handle.rs  lib.rs  message.rs  poll.rs  spec.rs  syscall.rs  timer.rs
ftl1/libs/rust/ftl_utils/: Cargo.toml
ftl1/libs/rust/ftl_utils/src/: bump_allocator.rs  byte_size.rs  endianess.rs  lib.rs  range_map.rs  slot_allocator.rs  static_assert.rs
ftl1/libs/rust/virtio/: Cargo.toml
ftl1/libs/rust/virtio/src/: free_list.rs  lib.rs  virtqueue.rs
ftl1/libs/typescript/cli/: package.json
ftl1/libs/typescript/cli/src/: index.ts  qemu.ts  utils.ts
ftl1/test/: apiserver.test.ts  hello_world.test.ts  tsconfig.json
ftl1/test/helpers/: emulator.ts
kazari/: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  requirements.txt  wayland-scanner.py  xpm2rs.py
kazari/demo/uefi/: .gitignore  Cargo.toml  Makefile
kazari/demo/uefi/src/: main.rs
kazari/icons/: normal-cursor.xpm
kazari/src/: icons.rs  lib.rs  standalone.rs
kazari/src/canvas/: inner.rs  mod.rs
kazari/src/client/: mod.rs  window.rs
kazari/src/server/: client.rs  keyboard.rs  layer.rs  mod.rs  pointer.rs  server.rs
kazari/src/server/objects/: mod.rs  wl_buffer.rs  wl_callback.rs  wl_compositor.rs  wl_display.rs  wl_keyboard.rs  wl_registry.rs  wl_seat.rs  wl_shm.rs  wl_shm_pool.rs  wl_surface.rs  xdg_surface.rs  xdg_toplevel.rs  xdg_wm_base.rs
kazari/src/utils/: bytes_reader.rs  bytes_writer.rs  interface_wrapper.rs  mmap.rs  mod.rs
kazari/src/wl/: connection.rs  interface.rs  mod.rs  wire.rs
kazari/src/wl/protocols/: mod.rs
kazari/src/wl/protocols/client/: mod.rs  wl_buffer.rs  wl_callback.rs  wl_compositor.rs  wl_data_device.rs  wl_data_device_manager.rs  wl_data_offer.rs  wl_data_source.rs  wl_display.rs  wl_keyboard.rs  wl_output.rs  wl_pointer.rs  wl_region.rs  wl_registry.rs  wl_seat.rs  wl_shell.rs  wl_shell_surface.rs  wl_shm.rs  wl_shm_pool.rs  wl_subcompositor.rs  wl_subsurface.rs  wl_surface.rs  wl_touch.rs  xdg_popup.rs  xdg_positioner.rs  xdg_surface.rs  xdg_toplevel.rs  (+1 more)
kazari/web/: Cargo.toml  README.md  package.json  webpack.config.js
kazari/web/src/: lib.rs
kazari/web/static/: index.html
resea2/arch/riscv64/: Cargo.toml  asm.rs  boot.rs  convert.rs  lib.rs  mmio.rs  registers.rs  switch.S  thread.rs  trap.S  trap.rs
resea2/arch/riscv64/machines/: mod.rs
resea2/kernel/: Cargo.toml  channel.h  halt.c  halt.h  init.c  init.h  list.c  main.rs  memory.rs  open.c  panic.rs  process.h  thread.rs  timer.c  timer.h
(+3162 files in other folders)
