[package]
name = "latte"
version = "0.1.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[dependencies]
lazy_static = "1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
dirs = "1"
signal-hook = "0.1"
structopt = "0.2"
backtrace = "0.3"
failure = "0.1"
syntect = "3"
walkdir = "2"

# The latest version published to the crates.io does not include
# a bug fix to DetectCursorPos: https://github.com/redox-os/termion/pull/145
[dependencies.termion]
git = "https://gitlab.redox-os.org/redox-os/termion"
rev = "ce6b43d071cd6edfc4b366bb945b45e06c239e2c"
