[package]
name = "kazari"
version = "0.0.1"
description = "A no_std GUI software stack (Work-in-Progress)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nuta/kazari"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
embedded-graphics = "0.7.0-alpha.3"
smallvec = "1.6"
hashbrown = "0.9"

# TODO: Remove this dependency.
once_cell = "1"

[dev-dependencies]
pretty_assertions = "0"
