[package]
name = "kazari-on-web"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
kazari = { path = ".." }
log = "0"
console_error_panic_hook = "0.1.5"
wasm-bindgen = "0.2.45"
wasm-logger = "0"
wee_alloc = { version = "0.4.2", optional = true }
once_cell = "1"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "CanvasRenderingContext2d",
    "ImageData",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "MouseEvent",
    "KeyboardEvent",
    "Window",
]

[dev-dependencies]
console_error_panic_hook = "0.1.5"
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
wasm-timer = "0"

# https://github.com/rustwasm/wasm-pack/issues/797
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-g']
