[package]
name = "tcpip"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ftl = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "alloc",
    "medium-ethernet",
    "socket-tcp",
    "proto-ipv4",
] }
