[package]
name = "kazari-on-uefi"
version = "0.1.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.8", features = ["alloc", "logger", "exts"] }
uefi-services = "0.5"
log = "0.4"
rlibc = "1.0.0"
