[package]
name = "ftl"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ftl_types = { workspace = true }
ftl_macros = { workspace = true }
ftl_utils = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
hashbrown = { workspace = true }
